@@ -3888,7 +3888,7 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 	}
 
 	function get_regexp_form(){
-		if(isset($_REQUEST['regexpid']) && !isset($_REQUEST["form_refresh"])){
+		if(isset($_REQUEST['regexpid']) && !isset($_REQUEST['form_refresh'])){
 			$sql = 'SELECT re.* '.
 				' FROM regexps re '.
 				' WHERE '.DBin_node('re.regexpid').
@@ -3925,7 +3925,7 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 		$tabExp = new CTableInfo();
 
 		$td1 = new CCol(S_EXPRESSION);
-		$td2 = new CCol(S_EXPECTED_RESULT);
+		$td2 = new CCol(_('Expected result'));
 		$td3 = new CCol(S_RESULT);
 
 		$tabExp->setHeader(array($td1,$td2,$td3));
@@ -3984,7 +3984,7 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 
 			$expec_result = expression_type2str($expression['expression_type']);
 			if(EXPRESSION_TYPE_ANY_INCLUDED == $expression['expression_type'])
-				$expec_result.=' ('.S_DELIMITER."='".$expression['exp_delimiter']."')";
+				$expec_result.=' ('._('Delimiter')."='".$expression['exp_delimiter']."')";
 
 			$tabExp->addRow(array(
 						$expression['expression'],
@@ -4034,8 +4034,7 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 	}
 
 	function get_expressions_tab(){
-
-		if(isset($_REQUEST['regexpid']) && !isset($_REQUEST["form_refresh"])){
+		if(isset($_REQUEST['regexpid']) && !isset($_REQUEST['form_refresh'])){
 			$expressions = array();
 			$sql = 'SELECT e.* '.
 					' FROM expressions e '.
@@ -4049,15 +4048,15 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 			}
 		}
 		else{
-			$expressions 	= get_request('expressions',array());
+			$expressions = get_request('expressions',array());
 		}
 
 		$tblExp = new CTableInfo();
 		$tblExp->setHeader(array(
-				new CCheckBox('all_expressions',null,'checkAll("Regular expression","all_expressions","g_expressionid");'),
-				S_EXPRESSION,
-				S_EXPECTED_RESULT,
-				S_CASE_SENSITIVE,
+				new CCheckBox('all_expressions', null, 'checkAll("regularExpressionsForm", "all_expressions", "g_expressionid");'),
+				_('Expression'),
+				_('Expected result'),
+				_('Case sensitive'),
 				S_EDIT
 			));
 
@@ -4066,16 +4065,15 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 
 			$exp_result = expression_type2str($expression['expression_type']);
 			if(EXPRESSION_TYPE_ANY_INCLUDED == $expression['expression_type'])
-				$exp_result.=' ('.S_DELIMITER."='".$expression['exp_delimiter']."')";
+				$exp_result.=' ('._('Delimiter')."='".$expression['exp_delimiter']."')";
 
 			$tblExp->addRow(array(
 				new CCheckBox('g_expressionid[]', 'no', null, $id),
 				$expression['expression'],
 				$exp_result,
-				$expression['case_sensitive']?S_YES:S_NO,
-				new CSubmit('edit_expressionid['.$id.']',S_EDIT)
+				$expression['case_sensitive'] ? _('Yes') : _('No'),
+				new CSubmit('edit_expressionid['.$id.']', _('Edit'))
 				));
-
 
 			$tblExp->addItem(new Cvar('expressions['.$id.'][expression]',		$expression['expression']));
 			$tblExp->addItem(new Cvar('expressions['.$id.'][expression_type]',	$expression['expression_type']));
@@ -4085,14 +4083,13 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 
 		$buttons = array();
 		if(!isset($_REQUEST['new_expression'])){
-			$buttons[] = new CSubmit('new_expression',S_NEW);
-			$buttons[] = new CSubmit('delete_expression',S_DELETE);
+			$buttons[] = new CSubmit('new_expression', _('New'));
+			$buttons[] = new CSubmit('delete_expression', _('Delete'));
 		}
 
 		$td = new CCol($buttons);
-		$td->setAttribute('colspan','5');
-		$td->setAttribute('style','text-align: right;');
-
+		$td->setAttribute('colspan', '5');
+		$td->setAttribute('style', 'text-align: right;');
 
 		$tblExp->setFooter($td);
 
@@ -4106,7 +4103,7 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 		$new_expression = get_request('new_expression', array());
 
 		if(is_array($new_expression) && isset($new_expression['id'])){
-			$tblExp->addItem(new Cvar('new_expression[id]',$new_expression['id']));
+			$tblExp->addItem(new Cvar('new_expression[id]', $new_expression['id']));
 		}
 
 		if(!is_array($new_expression)){
@@ -4118,46 +4115,45 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 		if(!isset($new_expression['case_sensitive']))		$new_expression['case_sensitive']	= 0;
 		if(!isset($new_expression['exp_delimiter']))		$new_expression['exp_delimiter']	= ',';
 
-		$tblExp->addRow(array(S_EXPRESSION, new CTextBox('new_expression[expression]',$new_expression['expression'],60)));
+		$tblExp->addRow(array(_('Expression'), new CTextBox('new_expression[expression]', $new_expression['expression'], 60)));
 
-		$cmbType = new CComboBox('new_expression[expression_type]',$new_expression['expression_type'],'javascript: submit();');
-		$cmbType->addItem(EXPRESSION_TYPE_INCLUDED,expression_type2str(EXPRESSION_TYPE_INCLUDED));
-		$cmbType->addItem(EXPRESSION_TYPE_ANY_INCLUDED,expression_type2str(EXPRESSION_TYPE_ANY_INCLUDED));
-		$cmbType->addItem(EXPRESSION_TYPE_NOT_INCLUDED,expression_type2str(EXPRESSION_TYPE_NOT_INCLUDED));
-		$cmbType->addItem(EXPRESSION_TYPE_TRUE,expression_type2str(EXPRESSION_TYPE_TRUE));
-		$cmbType->addItem(EXPRESSION_TYPE_FALSE,expression_type2str(EXPRESSION_TYPE_FALSE));
+		$cmbType = new CComboBox('new_expression[expression_type]', $new_expression['expression_type'], 'javascript: submit();');
+		$cmbType->addItem(EXPRESSION_TYPE_INCLUDED, expression_type2str(EXPRESSION_TYPE_INCLUDED));
+		$cmbType->addItem(EXPRESSION_TYPE_ANY_INCLUDED, expression_type2str(EXPRESSION_TYPE_ANY_INCLUDED));
+		$cmbType->addItem(EXPRESSION_TYPE_NOT_INCLUDED, expression_type2str(EXPRESSION_TYPE_NOT_INCLUDED));
+		$cmbType->addItem(EXPRESSION_TYPE_TRUE, expression_type2str(EXPRESSION_TYPE_TRUE));
+		$cmbType->addItem(EXPRESSION_TYPE_FALSE, expression_type2str(EXPRESSION_TYPE_FALSE));
 
-		$tblExp->addRow(array(S_EXPRESSION_TYPE,$cmbType));
+		$tblExp->addRow(array(_('Expression type'), $cmbType));
 
 		if(EXPRESSION_TYPE_ANY_INCLUDED == $new_expression['expression_type']){
-			$cmbDelimiter = new CComboBox('new_expression[exp_delimiter]',$new_expression['exp_delimiter']);
-			$cmbDelimiter->addItem(',',',');
-			$cmbDelimiter->addItem('.','.');
-			$cmbDelimiter->addItem('/','/');
+			$cmbDelimiter = new CComboBox('new_expression[exp_delimiter]', $new_expression['exp_delimiter']);
+			$cmbDelimiter->addItem(',', ',');
+			$cmbDelimiter->addItem('.', '.');
+			$cmbDelimiter->addItem('/', '/');
 
-			$tblExp->addRow(array(S_DELIMITER,$cmbDelimiter));
+			$tblExp->addRow(array(_('Delimiter'), $cmbDelimiter));
 		}
 		else{
-			$tblExp->addItem(new Cvar('new_expression[exp_delimiter]',$new_expression['exp_delimiter']));
+			$tblExp->addItem(new Cvar('new_expression[exp_delimiter]', $new_expression['exp_delimiter']));
 		}
 
-		$chkbCase = new CCheckBox('new_expression[case_sensitive]', $new_expression['case_sensitive'],null,1);
+		$chkbCase = new CCheckBox('new_expression[case_sensitive]', $new_expression['case_sensitive'], null, 1);
 
-		$tblExp->addRow(array(S_CASE_SENSITIVE,$chkbCase));
+		$tblExp->addRow(array(_('Case sensitive'), $chkbCase));
 
 		$tblExpFooter = new CTableInfo($tblExp);
 
 		$oper_buttons = array();
-
-		$oper_buttons[] = new CSubmit('add_expression',isset($new_expression['id'])?S_SAVE:S_ADD);
-		$oper_buttons[] = new CSubmit('cancel_new_expression',S_CANCEL);
+		$oper_buttons[] = new CSubmit('add_expression', isset($new_expression['id']) ? _('Save') : _('Add'));
+		$oper_buttons[] = new CSubmit('cancel_new_expression', _('Cancel'));
 
 		$td = new CCol($oper_buttons);
-		$td->setAttribute('colspan',2);
-		$td->setAttribute('style','text-align: right;');
+		$td->setAttribute('colspan', 2);
+		$td->setAttribute('style', 'text-align: right;');
 
 		$tblExpFooter->setFooter($td);
-// end of condition list preparation
+
 	return $tblExpFooter;
 	}
 
